[gd_scene load_steps=13 format=2]

[ext_resource path="res://World/Door.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Target_practice.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/World_tileset.tres" type="TileSet" id=3]
[ext_resource path="res://World/Lamp.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/light.png" type="Texture" id=5]
[ext_resource path="res://World/Base.gd" type="Script" id=6]
[ext_resource path="res://World/Chest.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/lamp.png" type="Texture" id=8]
[ext_resource path="res://Assets/dir_light2.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 68, 49 )

[sub_resource type="Animation" id=2]
resource_name = "DoorLightRotation"
length = 8.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 4, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -45.0, -135.0, -135.0, -45.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -135.0 ]
}

[node name="Base" type="Node2D"]
position = Vector2( 142, 85 )
script = ExtResource( 6 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -131078, 5, 0, -131077, 5, 0, -131076, 5, 0, -131075, 5, 0, -131074, 5, 0, -131073, 5, 0, -196608, 5, 0, -196607, 5, 0, -196606, 5, 0, -196605, 5, 0, -196604, 5, 0, -65542, 5, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 5, 0, -6, 5, 0, -5, 0, 0, -4, 0, 1, -3, 0, 65536, -2, 0, 0, -1, 0, 65536, -65536, 0, 1, -65535, 0, 65536, -65534, 0, 65536, -65533, 0, 0, -65532, 5, 0, 65531, 0, 0, 65532, 0, 65536, 65533, 0, 0, 65534, 0, 65536, 65535, 0, 65537, 0, 0, 1, 1, 0, 65536, 2, 0, 65537, 3, 0, 0, 4, 5, 0, 131066, 5, 0, 131067, 0, 0, 131068, 0, 65536, 131069, 0, 65537, 131070, 0, 0, 131071, 0, 1, 65536, 0, 1, 65537, 0, 65537, 65538, 0, 0, 65539, 0, 0, 65540, 5, 0, 196602, 5, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 5, 0, 262138, 5, 0, 262139, 5, 0, 262140, 5, 0, 262141, 5, 0, 262142, 5, 0, 262143, 5, 0, 196608, 5, 0, 196609, 5, 0, 196610, 5, 0, 196611, 5, 0, 196612, 5, 0 )

[node name="Door" parent="." instance=ExtResource( 1 )]
position = Vector2( -91, 4 )

[node name="Pet" parent="." instance=ExtResource( 2 )]
position = Vector2( 28, 21 )
collision_mask = 3
mode = 2
mass = 1.0
can_sleep = false

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -36, 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 40, -5 )
shape = SubResource( 1 )

[node name="Lamps" type="Node2D" parent="."]

[node name="Lamp" parent="Lamps" instance=ExtResource( 4 )]
position = Vector2( -79, -16 )
rotation = -1.57079
scale = Vector2( 0.25, 0.25 )

[node name="Lamp2" parent="Lamps" instance=ExtResource( 4 )]
position = Vector2( -79, 32 )
rotation = -1.57079
scale = Vector2( 0.25, 0.25 )

[node name="Lamp7" parent="Lamps" instance=ExtResource( 4 )]
position = Vector2( 63, -16 )
rotation = 1.5708
scale = Vector2( 0.25, 0.25 )

[node name="Lamp8" parent="Lamps" instance=ExtResource( 4 )]
position = Vector2( 63, 32 )
rotation = 1.5708
scale = Vector2( 0.25, 0.25 )

[node name="Lamp3" parent="Lamps" instance=ExtResource( 4 )]
position = Vector2( 81, 0 )
rotation = -1.57079
scale = Vector2( 0.25, 0.25 )

[node name="Lamp4" parent="Lamps" instance=ExtResource( 4 )]
position = Vector2( 0, -49 )
rotation = -3.14159
scale = Vector2( 0.25, 0.25 )

[node name="Lamp5" parent="Lamps" instance=ExtResource( 4 )]
position = Vector2( 0, 65 )
scale = Vector2( 0.25, 0.25 )

[node name="Lamp6" parent="Lamps" instance=ExtResource( 4 )]
position = Vector2( 0, 65 )
scale = Vector2( 0.25, 0.25 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -9, 8 )
texture = ExtResource( 5 )
texture_scale = 0.7
color = Color( 1, 0.262745, 0.262745, 1 )

[node name="Chest" parent="." instance=ExtResource( 7 )]
position = Vector2( -55, -24 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.203922, 0.0901961, 0.498039, 1 )
position = Vector2( -89, -22 )
rotation = -2.35619
texture = ExtResource( 8 )

[node name="Light2D2" type="Light2D" parent="Sprite"]
rotation = -1.5708
texture = ExtResource( 9 )
offset = Vector2( 128, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "DoorLightRotation"
anims/DoorLightRotation = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Chest" to="." method="_on_Chest_body_entered"]
[connection signal="body_exited" from="Chest" to="." method="_on_Chest_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
